Correção de bugs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </table>
                     </form>
                     <p id="chave-gerada"></p>
-                    <ul id="erros-geracao" class="erros"></p>
+                    <ul id="erros-geracao" class="erros"></ul>
                     
                     <div class="buttons">
                         <button id="generate-key">Gerar chave</button>
