Base para inserir chave

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <input type="text" id="user-key">
                     <div class="buttons">
                         <button id="insert-key">Inserir chave</button>
-                        <button id="remove-key">Limpar</button>
+                        <button id="clear-key">Limpar</button>
                     </div>
                     <!-- colocar aqui algo pra verificar se a chave foi inserida -->
                 </div>
