inserção de chave e localStorage

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                     <!-- inserir chave -->
                     <h2>Inserir chave</h2>
                     <input type="text" id="user-key">
+                    <p id="sucesso-chave"></p>
+                    <ul id="erros-insercao" class="erros"></ul>
                     <div class="buttons">
                         <button id="insert-key">Inserir chave</button>
                         <button id="clear-key">Limpar</button>
@@ -68,6 +70,8 @@
     
             </div>
         </div>
+        <script src="js/conexao-db.js"></script>
         <script src="js/gerar-chave.js"></script>
+        <script src="js/inserir-chave.js"></script>
     </body>
 </html>
