adicionando criptografar texto (com bugs)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <input type="text" id="text-to-encript">
                     <p id="encripted"></p>
                     <div class="buttons">
-                        <button id="generate-key">Criptografar texto</button>
+                        <button id="btn-cript">Criptografar texto</button>
                         <button id="clear-encripted">Limpar</button>
                     </div>
                 </div>
@@ -68,8 +68,10 @@
     
             </div>
         </div>
+        <script src="js/index.js"></script>
         <script src="js/conexao-db.js"></script>
         <script src="js/gerar-chave.js"></script>
         <script src="js/inserir-chave.js"></script>
+        <script src="js/criptografar-texto.js"></script>
     </body>
 </html>
